--- a/source/components/header.html
+++ b/source/components/header.html
@@ -63,7 +63,7 @@
           <span class="user-menu__user-name">Анастасия</span>
 
           <svg class="user-menu__dropdown-icon" width="13" height="13">
-            <use xlink:href="img/sprite.svg#icon-dropdown-arrow"></use>
+            <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
         </button>
 
