--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,11 @@
 @import "blocks/page-footer";
 @import "blocks/arrow-backward";
 @import "blocks/page-title";
+@import "blocks/page-nav";
+@import "blocks/page-top";
+@import "blocks/archive-link";
+
+// composite poll
 @import "blocks/poll-process";
 @import "blocks/poll-result";
 @import "blocks/composite-poll";
