--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -168,4 +168,30 @@
   @media (max-width: $tablet-width - 1) {
     padding-bottom: 27px;
   }
+
+  &--link {
+    display: block;
+    text-align: left;
+  }
+}
+
+.news-notice__button {
+  &--news {
+    width: 360px;
+    margin-top: 24px;
+    margin-bottom: 40px;
+
+    @media (max-width: $mobile-max-width) {
+      width: 100%;
+      margin-bottom: 32px;
+    }
+  }
+}
+
+.news-notice--news {
+  padding: 0;
+
+  .news-notice__list {
+    padding-top: 6px;
+  }
 }
