--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,11 +23,6 @@
 @import "blocks/counter";
 @import "blocks/paginator";
 @import "blocks/button-star";
-@import "blocks/news-notice";
-@import "blocks/social";
-@import "blocks/poll";
-@import "blocks/project";
-@import "blocks/discussion";
 @import "blocks/page-404";
 @import "blocks/page-footer";
 @import "blocks/arrow-backward";
@@ -35,6 +30,14 @@
 @import "blocks/page-nav";
 @import "blocks/page-top";
 @import "blocks/archive-link";
+
+// main page
+@import "blocks/news-notice";
+@import "blocks/social";
+@import "blocks/poll";
+@import "blocks/project";
+@import "blocks/discussion";
+@import "blocks/cookie";
 
 // composite poll
 @import "blocks/poll-process";
