--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,9 @@ $mobile-width: 320px;
 
 $max-width: 1366px;
 
+$tablet-padding: 24px;
+$mobile-padding: 16px;
+
 $dark-main: #333333;
 $dark-text: #354052;
 $white: #ffffff;
