--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,10 +1,15 @@
-.gallery {
+.gallery__tape {
   display: flex;
-  overflow-x: auto;
+}
+
+.swiper-slide {
+  width: 135px;
 }
 
 .gallery__item-link {
   display: block;
+  width: 135px;
+  height: 135px;
   margin-right: 16px;
   user-select: none;
   outline: none;
@@ -28,6 +33,7 @@
   height: 135px;
   padding: 0;
   margin: 0;
+  pointer-events: none;
 }
 
 .gallery__item-img {
@@ -43,7 +49,30 @@
 }
 
 
+@include tablet {
+  .gallery__tape .swiper-slide {
+    &:first-child {
+      padding-left: $tablet-padding;
+    }
+
+    &:last-child {
+      padding-right: $tablet-padding;
+    }
+  }
+}
+
+
 @include mobile {
+  .gallery__tape .swiper-slide {
+    &:first-child {
+      padding-left: $mobile-padding;
+    }
+
+    &:last-child {
+      padding-right: $mobile-padding;
+    }
+  }
+
   .gallery__item-link {
     margin-right: 12px;
   }
