Добавляет страницу обсуждений

--- a/source/sass/blocks/discussion.scss
+++ b/source/sass/blocks/discussion.scss
@@ -255,3 +255,32 @@
     margin-top: 24px;
   }
 }
+
+.discussion--page {
+  padding: 0;
+
+  & .discussion__list {
+    padding-top: 5px;
+    padding-bottom: 0;
+
+    @media (max-width: $mobile-max-width) {
+      margin-top: 10px;
+    }
+  }
+
+  & .discussion__button {
+    width: 360px;
+    margin-top: 24px;
+    margin-bottom: 40px;
+
+    @media (max-width: $tablet-width - 1) {
+      margin-top: 48px;
+    }
+
+    @media (max-width: $mobile-max-width) {
+      width: 100%;
+      margin-top: 40px;
+      margin-bottom: 32px;
+    }
+  }
+}
