--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -172,6 +172,13 @@
   &--link {
     display: block;
     text-align: left;
+    text-decoration: none;
+    transition: color 0.4s ease;
+
+    &:hover,
+    &:focus {
+      color: $blue-default;
+    }
   }
 }
 
