--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -19,11 +19,21 @@
     display: block;
   }
 
-  .main-menu__container {
+  .main-menu .container {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
     height: 100%;
     overflow-y: scroll;
 
     // iOS fix
     -webkit-overflow-scrolling: touch;
+  }
+}
+
+
+@include mobile {
+  .main-menu .container {
+    padding: 0;
   }
 }
