--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -12,7 +12,7 @@
   }
 }
 
-.page-header__container {
+.page-header .container {
   display: flex;
   align-items: center;
 }
@@ -121,14 +121,6 @@
     }
   }
 
-  .page-header__container {
-    &--menu {
-      flex-direction: column;
-      align-items: flex-start;
-      padding: 0;
-    }
-  }
-
   .page-header__link {
     &[href]:hover:not(.focus-visible) {
       color: inherit;
@@ -164,12 +156,6 @@
 
 
 @include mobile {
-  .page-header__container {
-    &--menu {
-      padding: 0;
-    }
-  }
-
   .page-header__roi-logo {
     width: 124px;
     height: 40px;
