Вносит правки для шапки

--- a/source/components/header.html
+++ b/source/components/header.html
@@ -15,7 +15,7 @@
       </a>
 
       <button class="page-header__menu-btn menu-btn" type="button">
-        <span class="visually-hidden">Открыть меню</span>
+        <span class="menu-btn__text visually-hidden">Открыть меню</span>
         <span class="menu-btn__icon"></span>
       </button>
     </div>
@@ -58,7 +58,7 @@
         <div class="user-menu__overlay"></div>
 
         <button class="user-menu__dropdown-btn" type="button">
-          <span class="visually-hidden">Открыть меню</span>
+          <span class="user-menu__dropdown-btn-text visually-hidden">Открыть меню</span>
 
           <svg class="user-menu__user-icon" width="16" height="16">
             <use xlink:href="img/sprite.svg#icon-user"></use>
