--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -9,10 +9,10 @@
     padding: 0;
     background-color: transparent;
     overflow-y: hidden;
+  }
 
-    &--js {
-      display: none;
-    }
+  .page-header--js .main-menu {
+    display: none;
   }
 
   .page-header--open-menu .main-menu {
