--- a/source/sass/blocks/user-menu.scss
+++ b/source/sass/blocks/user-menu.scss
@@ -84,7 +84,7 @@
   box-shadow: 0 2px 10px rgba(46, 67, 102, 0.1);
 }
 
-.user-menu--js .user-menu__list {
+.page-header--js .user-menu__list {
   display: none;
   position: absolute;
   top: calc(100% + 9px);
@@ -118,8 +118,6 @@
 
   .user-menu__dropdown-btn {
     max-width: none;
-    padding: 0;
-    margin-bottom: 10px;
 
     &:hover:not(.focus-visible) {
       color: inherit;
@@ -144,12 +142,12 @@
     position: static;
     display: block;
     width: 100%;
-    padding-left: 30px;
+    padding-left: 54px;
     border-radius: 0;
     box-shadow: none;
   }
 
-  .user-menu--js .user-menu__list {
+  .page-header--js .user-menu__list {
     display: block;
     height: 0;
     overflow: hidden;
@@ -171,5 +169,9 @@
 @include mobile {
   .user-menu {
     padding: 21px 16px 0;
+  }
+
+  .user-menu__list {
+    padding-left: 46px;
   }
 }
