--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "plugins/normalize";
 
 /* Блоки */
+@import "blocks/section";
 @import "blocks/page-body";
 @import "blocks/page-content";
 @import "blocks/container";
