--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -13,51 +13,6 @@
   }
 }
 
-.poll__head {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.poll__title {
-  position: relative;
-
-  margin: 0;
-  padding: 0;
-  padding-left: 52px;
-
-  color: $dark-text;
-
-  @include font-h1();
-
-  @media (max-width: $tablet-width - 1) {
-    padding-left: 46px;
-
-    @include font-h2();
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 8px;
-    left: 0;
-
-    width: 32px;
-    height: 32px;
-
-    background-image: url("../img/icon-poll.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-
-    @media (max-width: $tablet-width - 1) {
-      top: 2px;
-
-      width: 30px;
-      height: 30px;
-    }
-  }
-}
-
 .poll__archive-link {
   @media (max-width: $tablet-width - 1) {
     display: none;
@@ -126,10 +81,6 @@
   &:hover {
     box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
 
-    &::before {
-      bottom: 40px;
-    }
-
     .poll__link {
       display: block;
     }
@@ -189,11 +140,11 @@
 
   display: none;
   width: 100%;
-  padding-top: 6px;
+  padding-top: 46px;
   padding-bottom: 14px;
   padding-left: 24px;
 
-  background-color: $color-bg;
+  background-image: linear-gradient(transparent, $color-bg 35px);
   border-radius: $border-radius;
 }
 
