--- a/source/components/header.html
+++ b/source/components/header.html
@@ -28,7 +28,7 @@
 
         <form action="#" method="post">
           <div class="location-switcher__btn form-radio">
-            <input id="location-residence" class="visually-hidden" type="radio" name="location" value="residence" checked>
+            <input id="location-residence" type="radio" name="location" value="residence" checked>
             <label for="location-residence">
               Адрес проживания
               <span class="page-header__location-address location-switcher__address">Городской округ рабочий поселок Новогуровский</span>
@@ -36,7 +36,7 @@
           </div>
 
           <div class="location-switcher__btn form-radio">
-            <input id="location-registration" class="visually-hidden" type="radio" name="location" value="registration">
+            <input id="location-registration" type="radio" name="location" value="registration">
             <label for="location-registration">
               Адрес регистрации
               <span class="page-header__location-address location-switcher__address">Краснобродский городской округ</span>
