--- a/source/sass/blocks/page-top.scss
+++ b/source/sass/blocks/page-top.scss
@@ -24,8 +24,9 @@
   }
 
   @media (max-width: $mobile-max-width) {
+    display: flex;
+    justify-content: center;
     width: 100%;
-    padding-left: 63px;
   }
 }
 
