--- a/source/components/cookie.html
+++ b/source/components/cookie.html
@@ -1,5 +1,5 @@
 <div class="cookie js_cookie">
-  <div class="cookie-wrap">
+  <div class="cookie__wrap">
     <div class="cookie__main">
       <p class="cookie__title">
         Информируем Вас о том, что сайт обрабатывает персональные данные и использует файлы "cookies"
@@ -9,5 +9,11 @@
       </p>
     </div>
     <button type="button" class="cookie__button button button--blue js_btn">Согласен</button>
+    <button class="cookie__button-top button js_btn_top">
+      <svg width="20" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="img/sprite.svg#icon-arrow"></use>
+      </svg>
+      <span class="visually-hidden">Наверх</span>
+    </button>
   </div>
 </div>
