--- a/source/components/cookie.html
+++ b/source/components/cookie.html
@@ -1,5 +1,5 @@
 <div class="cookie js_cookie">
-  <div class="cookie__wrap">
+  <div class="cookie__wrap container">
     <div class="cookie__main">
       <p class="cookie__title">
         Информируем Вас о том, что сайт обрабатывает персональные данные и использует файлы "cookies"
@@ -8,12 +8,7 @@
         Мы обязуемся обеспечить конфиденциальность полученных от Вас персональных данных для целей, указанных в настоящей Политике обработки персональных данных, а также безопасность при их обработке в соответствии с требованиями Законодательства Российской Федерации. Для подтверждения Вашего согласия на обработку данных на указанных выше условиях нажмите "Согласен"
       </p>
     </div>
+
     <button type="button" class="cookie__button button button--blue js_btn">Согласен</button>
-    <button class="cookie__button-top button js_btn_top">
-      <svg width="20" height="12" viewBox="0 0 33 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <use xlink:href="img/sprite.svg#icon-arrow"></use>
-      </svg>
-      <span class="visually-hidden">Наверх</span>
-    </button>
   </div>
 </div>
