--- a/source/sass/blocks/cookie.scss
+++ b/source/sass/blocks/cookie.scss
@@ -9,50 +9,26 @@
   box-shadow: 0 -4px 8px rgba(46, 67, 102, 0.1);
 
   &.js_hide {
-    background-color: transparent;
-    box-shadow: none;
-
-    pointer-events: none;
-  }
-}
-
-.js_hide {
-  .cookie__wrap {
-    justify-content: flex-end;
-  }
-
-  .cookie__main,
-  .cookie__button {
     display: none;
-  }
-
-  .cookie__button-top {
-    pointer-events: auto;
   }
 }
 
 .cookie__wrap {
-  position: relative;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: $desktop-width;
-  margin: 0 auto;
-  padding: 16px 40px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 
   @media (max-width: $desktop-width - 81) {
     flex-direction: column;
-    padding: 16px 24px;
-  }
-
-  @media (max-width: $tablet-width - 1) {
-    padding: 16px;
   }
 }
 
 .cookie__title {
   padding: 0;
+  margin: 0;
+  margin-bottom: 10px;
 
   font-size: rem(15px);
   line-height: 1.35;
@@ -60,6 +36,7 @@
 }
 
 .cookie__text {
+  margin: 0;
   font-size: rem(13px);
   line-height: 1.3;
   color: $grey;
@@ -70,45 +47,15 @@
 }
 
 .cookie__button {
+  flex-shrink: 0;
+  box-sizing: border-box;
+  width: 175px;
+  padding-right: 20px;
+  padding-left: 20px;
   margin-right: 16px;
   margin-left: 40px;
 
   @media (max-width: $desktop-width - 81) {
-    margin: 0;
-  }
-}
-
-.cookie__button-top {
-  box-sizing: border-box;
-  width: 48px;
-  min-width: 48px;
-  height: 48px;
-  min-height: 48px;
-  margin-right: -64px;
-  padding: 0;
-
-  background-color: $white;
-  border: 1px solid $light-grey;
-  border-radius: $border-radius;
-  box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
-
-  pointer-events: auto;
-
-  svg {
-    color: $grey-default;
-
-    transform: rotate(-90deg);
-  }
-
-  @media (max-width: $max-width - 1) {
-    margin-right: -10px;
-  }
-
-  @media (max-width: $desktop-width - 81) {
-    position: absolute;
-    right: 16px;
-    bottom: 16px;
-
     margin: 0;
   }
 }
