--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -161,15 +161,34 @@
 
   cursor: pointer;
 
-  &--tick::after {
+  &::after {
     content: "";
 
     display: inline-block;
     width: 16px;
     height: 16px;
+    margin-left: 12px;
 
     vertical-align: text-top;
 
-    background-image: url("../img/icon-tick.svg");
+    background-size: cover;
+  }
+
+  &--subscribe::after {
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='13' viewBox='0 0 16 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.875 6.53311L5.52806 11.1862L15.125 1.58923' stroke='%232C8ECC' stroke-width='2'/%3E%3C/svg%3E%0A");
+  }
+
+  &--unsubscribe {
+    color: $red;
+
+    &:hover,
+    &:focus {
+      color: $red;
+      opacity: 0.8;
+    }
+
+    &::after {
+      background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5 1.5L14.5 14.5M14.5 1.5L1.5 14.5' stroke='%23E55050' stroke-width='2'/%3E%3C/svg%3E%0A");
+    }
   }
 }
