--- a/source/sass/blocks/cookie.scss
+++ b/source/sass/blocks/cookie.scss
@@ -20,7 +20,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
 
-  @media (max-width: $desktop-width - 81) {
+  @include tablet {
     flex-direction: column;
   }
 }
@@ -41,7 +41,7 @@
   line-height: 1.3;
   color: $grey;
 
-  @media (max-width: $desktop-width - 81) {
+  @include tablet {
     padding-bottom: 10px;
   }
 }
@@ -55,7 +55,7 @@
   margin-right: 16px;
   margin-left: 40px;
 
-  @media (max-width: $desktop-width - 81) {
+  @include tablet {
     margin: 0;
   }
 }
