Добавляет новый селект

--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -24,6 +24,7 @@
 }
 
 .filter__category-select {
+  display: inline-block;
   margin-bottom: 2px;
 }
 
@@ -54,6 +55,31 @@
 
 .filter__vote-select {
   margin-left: 90px;
+
+  & .ss-main .ss-multi-selected,
+  .ss-main .ss-single-selected,
+  .ss-main .ss-single-selected .placeholder .ss-disabled {
+    height: 20px;
+    font-size: rem(15px);
+    line-height: rem(20px);
+  }
+
+  & .ss-main .ss-content {
+    width: 146px;
+    right: auto;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  & .ss-main .ss-content .ss-list {
+    width: 146px;
+    height: auto;
+  }
+
+  & .ss-main .ss-single-selected .ss-arrow span {
+    width: 8px;
+    height: 8px;
+  }
 
   .form-select__title {
     font-size: rem(15px);
