--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -55,3 +55,6 @@
 @import "blocks/vote-end";
 @import "blocks/project-item";
 @import "blocks/projects";
+
+// poll page
+@import "blocks/poll-page";
