--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 /* Плагины */
 @import "plugins/normalize";
 @import "plugins/slimselect";
+@import "plugins/nouislider";
 
 /* Блоки */
 @import "blocks/section";
