--- a/source/sass/blocks/form-range.scss
+++ b/source/sass/blocks/form-range.scss
@@ -1,5 +1,7 @@
 .form-range {
   width: 308px;
+  padding-left: 5px;
+  padding-right: 5px;
 
   @media (max-width: $mobile-max-width) {
     width: 100%;
@@ -7,10 +9,6 @@
 
   & .noUi-horizontal {
     height: 6px;
-    // background-image: linear-gradient(to right, $light-grey 0%, $light-grey 98%, $grey-default 98%, $grey-default 100%);
-    // background-position: left bottom;
-    // background-repeat: repeat-x;
-    // background-size: 31px 100%;
     background: $light-grey;
     cursor: pointer;
   }
@@ -20,10 +18,6 @@
   }
 
   & .noUi-connect {
-    // background-image: linear-gradient(to right, $blue-default 0%, $blue-default 98%, $white 98%, $white 100%);
-    // background-position: left bottom;
-    // background-repeat: repeat-x;
-    // background-size: 10% 100%;
     background: rgba($blue-default, 1);
   }
 
@@ -98,4 +92,26 @@
 
 html:not([dir="rtl"]) .noUi-horizontal .noUi-handle {
   right: -12px;
+}
+
+.form-range__value {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+
+  @include font-h5;
+  color: $dark-text;
+
+  & span:nth-child(2) {
+    margin-left: 10px;
+  }
+}
+
+.form-range__description {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 12px;
+
+  @include caption-text;
+  color: $grey-default;
 }
