--- a/source/sass/blocks/page-nav.scss
+++ b/source/sass/blocks/page-nav.scss
@@ -12,6 +12,7 @@
   border-radius: 5px;
 
   @media (max-width: $tablet-width - 1) {
+    justify-content: space-around;
     width: 369px;
     padding: 16px 16px;
   }
