--- a/source/sass/blocks/form-checkbox.scss
+++ b/source/sass/blocks/form-checkbox.scss
@@ -12,7 +12,7 @@
   align-self: flex-start;
   color: $dark-text;
   cursor: pointer;
-  transition: all 0.4s ease;
+  transition: all $style-change-duration;
 
   &::before {
     content: "";
@@ -23,7 +23,7 @@
     background-color: $white;
     border-radius: 5px;
     border: 1px solid rgba(161, 167, 174, 0.5);
-    transition: all 0.4s ease;
+    transition: all $style-change-duration;
   }
 
   &::after {
@@ -37,7 +37,7 @@
     background-image: url("../img/checkbox.svg");
     background-repeat: no-repeat;
     background-position: center;
-    transition: all 0.4s ease;
+    transition: all $style-change-duration;
   }
 }
 
