--- a/source/sass/blocks/button-star.scss
+++ b/source/sass/blocks/button-star.scss
@@ -3,7 +3,7 @@
   padding: 5px;
   color: $light-grey;
   cursor: pointer;
-  transition: all 0.4s ease;
+  transition: color $style-change-duration;
 
   &:hover,
   &:focus {
