--- a/source/sass/blocks/form-radio.scss
+++ b/source/sass/blocks/form-radio.scss
@@ -12,7 +12,7 @@
   align-self: flex-start;
   color: $dark-text;
   cursor: pointer;
-  transition: all 0.4s ease;
+  transition: all $style-change-duration;
 
   &::before {
     content: "";
@@ -23,7 +23,7 @@
     background-color: $white;
     border-radius: 50%;
     border: 1px solid rgba(161, 167, 174, 0.5);
-    transition: all 0.4s ease;
+    transition: all $style-change-duration;
   }
 }
 
