--- a/source/sass/blocks/form-range.scss
+++ b/source/sass/blocks/form-range.scss
@@ -31,7 +31,7 @@
     box-shadow: none;
 
     cursor: pointer;
-    transition: border-color 0.4s ease;
+    transition: border-color $style-change-duration;
 
     &::before,
     &::after {
