--- a/source/sass/blocks/link-arrow.scss
+++ b/source/sass/blocks/link-arrow.scss
@@ -7,7 +7,7 @@
   text-decoration: none;
   color: $blue-default;
 
-  transition: all 0.4s ease;
+  transition: all $style-change-duration;
 
   & span {
     padding-right: 6px;
