--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -55,7 +55,7 @@
     align-self: flex-start;
     color: $blue-default;
     text-decoration: none;
-    transition: all 0.4s ease;
+    transition: all $style-change-duration;
 
     &:hover,
     &:focus {
