--- a/source/sass/blocks/poll-result.scss
+++ b/source/sass/blocks/poll-result.scss
@@ -5,6 +5,7 @@
   background-position: left bottom;
   background-repeat: no-repeat;
   background-size: 100% 1px;
+  background-color: $white;
 }
 
 .poll-result__question {
@@ -17,25 +18,24 @@
 
 .poll-result__item {
   position: relative;
+  z-index: 2;
   max-width: 800px;
   margin-bottom: 16px;
   border-radius: 5px;
   background-color: $color-bg;
+  overflow: hidden;
 }
 
 .poll-result__fill {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   width: 0%;
   height: 100%;
 
   border-radius: 5px 0 0 5px;
   background-color: $fill-color;
-
-  &--100 {
-    border-radius: 5px;
-  }
 }
 
 .poll-result__description {
