--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -72,7 +72,7 @@
     width: 100%;
     height: 40px;
 
-    background-image: linear-gradient(180deg, #f9f9fa 0%, rgba(249, 249, 250, 0) 100%);
+    background-image: linear-gradient(180deg, rgba(249, 249, 250, 0) 0%, rgba(249, 249, 250, 0) 100%);
     transform: matrix(1, 0, 0, -1, 0, 0);
 
     transition: bottom $style-change-duration linear;
