--- a/source/sass/blocks/cookie.scss
+++ b/source/sass/blocks/cookie.scss
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  z-index: 1;
 
   width: 100%;
 
@@ -26,9 +27,9 @@
 }
 
 .cookie__title {
-  padding: 0;
   margin: 0;
   margin-bottom: 10px;
+  padding: 0;
 
   font-size: rem(15px);
   line-height: 1.35;
@@ -37,6 +38,7 @@
 
 .cookie__text {
   margin: 0;
+
   font-size: rem(13px);
   line-height: 1.3;
   color: $grey;
@@ -50,12 +52,15 @@
   flex-shrink: 0;
   box-sizing: border-box;
   width: 175px;
-  padding-right: 20px;
-  padding-left: 20px;
   margin-right: 16px;
   margin-left: 40px;
+  padding-right: 20px;
+  padding-left: 20px;
 
   @include tablet {
     margin: 0;
+  }
+  @include mobile {
+    width: 100%;
   }
 }
