--- a/source/sass/blocks/poll-page.scss
+++ b/source/sass/blocks/poll-page.scss
@@ -4,7 +4,6 @@
   @include tablet {
     padding-bottom: 80px;
   }
-
   @include mobile {
     padding-bottom: 64px;
   }
@@ -68,22 +67,43 @@
   margin: 24px 0;
 }
 
-.poll-page__doc {
+.poll-page__doc-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.poll-page__doc-wrap {
   position: relative;
 
   display: flex;
+  flex-shrink: 0;
   flex-direction: column;
   align-self: flex-start;
+  margin: 0 10px 10px 0;
   padding: 19px 24px 19px 60px;
 
   font-size: rem(13px);
   line-height: 1.3;
+  text-decoration: none;
 
   border: 1px solid $light-grey;
   border-radius: $border-radius;
 
   @include mobile {
+    width: 100%;
     max-width: 100%;
+    margin-right: 0;
+  }
+
+  &:hover,
+  &:focus {
+    .poll-page__doc-name {
+      color: $blue-default;
+    }
   }
 
   &::before {
@@ -95,7 +115,7 @@
     width: 24px;
     height: 24px;
 
-    background-image: url("../../img/icon-odt.svg");
+    background-image: url("../img/icon-odt.svg");
     background-repeat: no-repeat;
   }
 }
@@ -107,8 +127,11 @@
   color: $dark-text;
   text-decoration: none;
 
+  transition: color $style-change-duration;
+
   @include mobile {
     min-width: auto;
+    max-width: 100%;
     overflow: hidden;
 
     white-space: nowrap;
@@ -125,14 +148,14 @@
 
 .poll-page__form {
   max-width: 740px;
-  margin: 48px 0 0;
+  margin: 38px 0 0;
   padding: 24px 24px 32px;
 
   background-color: $color-bg;
   border-radius: $border-radius;
 
   @include mobile {
-    margin: 32px 0 0;
+    margin: 22px 0 0;
   }
 }
 
@@ -144,6 +167,14 @@
 
   &:first-child {
     padding-top: 0;
+  }
+
+  .noUi-tooltip {
+    background-color: $color-bg;
+  }
+
+  .noUi-horizontal .noUi-handle-lower {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   }
 }
 
