--- a/source/sass/blocks/poll-page.scss
+++ b/source/sass/blocks/poll-page.scss
@@ -120,6 +120,10 @@
   }
 }
 
+.poll-page__doc-item {
+  max-width: 100%;
+}
+
 .poll-page__doc-name {
   align-self: flex-start;
   min-width: 280px;
