--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -22,7 +22,7 @@ body {
   font-style: normal;
   font-size: rem(15px);
   line-height: rem(20px);
-  color: dark-text;
+  color: $dark-text;
   background-color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
