--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -21,6 +21,11 @@ $light-red: #fef9f9;
 $red: #e55050;
 $color-bg: #f9f9fa;
 $orange: #fca844;
+$dark: #21252b;
+$comfort: #4d4b43;
+$light-yellow: #f7f3d8;
+$light-green: #aae55c;
+$brown: #3b2717;
 $fill-color: rgba(155, 210, 244, 0.25);
 
 $retina2x-dpi: 144dpi;
