--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/page-nav";
 @import "blocks/page-top";
 @import "blocks/archive-link";
+@import "blocks/special-popup";
 
 // main page
 @import "blocks/news-notice";
