--- a/source/sass/blocks/cookie.scss
+++ b/source/sass/blocks/cookie.scss
@@ -57,6 +57,10 @@
   padding-right: 20px;
   padding-left: 20px;
 
+  @media (min-width: $desktop-width) and (max-width: 1250px) {
+    margin-right: 32px;
+  }
+
   @include tablet {
     margin: 0;
   }
