--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,7 +11,7 @@ $mobile-padding: 16px;
 $dark-main: #333333;
 $dark-text: #354052;
 $white: #ffffff;
-$light-green: #f8fcf7;
+$pale-green: #f8fcf7;
 $green: #70bf56;
 $blue-default: #2c8ecc;
 $blue-accent: #116ca6;
@@ -20,7 +20,7 @@ $light-blue-accent: #9bd2f4;
 $light-grey: #e3e8ee;
 $grey: #707b8c;
 $grey-default:#a6abb3;
-$light-red: #fef9f9;
+$pale-red: #fef9f9;
 $red: #e55050;
 $color-bg: #f9f9fa;
 $orange: #fca844;
